--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -32,17 +32,13 @@ public with sharing class LeadTriggerHandler {
 	 */
 	public static void handleTitleNormalization(List<Lead> leadsToNormalize) {
 		for (Lead ld : leadsToNormalize) {
-			if (ld.title == 'vp' || ld.title.contains('v.p.') || ld.title.contains('vice president')) {
+			if (ld.Title == 'vp' || ld.Title == 'v.p.' || ld.Title == 'vice president') {
 				ld.Title = 'Vice President';
-			} else if (
-				ld.title.contains('mgr') ||
-				ld.title.contains('manage') ||
-				ld.title.contains('head of department')
-			) {
+			} else if (ld.Title == 'mgr' || ld.Title == 'manage' || ld.Title == 'head of department') {
 				ld.Title = 'Manager';
-			} else if (ld.title.contains('exec') || ld.title == 'chief' || ld.title.contains('head')) {
+			} else if (ld.Title == 'exec' || ld.Title == 'chief' || ld.Title == 'head') {
 				ld.Title = 'Executive';
-			} else if (ld.title.contains('assist') || ld.title.contains('deputy') || ld.title == 'jr') {
+			} else if (ld.Title == 'assist' || ld.Title == 'deputy' || ld.Title == 'jr') {
 				ld.Title = 'Assistant';
 			}
 		}
@@ -65,15 +61,19 @@ public with sharing class LeadTriggerHandler {
 
 			// Check and add points based on the specified conditions
 			if (ld.LeadSource == 'Website' && ld.Email != null) {
-				score = 3;
+				score += 3;
 			}
 
 			if (ld.Phone != null) {
-				score = 5;
+				score += 5;
 			}
 
 			if (ld.Industry == 'Technology') {
-				score = 10;
+				score += 10;
+			}
+
+			if (ld.Lead_Score__c > 18 || score > 18) {
+				score = 18;
 			}
 
 			ld.Lead_Score__c = score; // Set the computed score back to the lead
@@ -107,19 +107,27 @@ public with sharing class LeadTriggerHandler {
 		// Step 1: Gather all lead emails
         Map<Id,String> leadToEmailMap = new Map<Id,String>();
 		for (Lead lead : leads) {
-			leadToEmailMap.put(lead.Id, lead.Email);
+			if(!lead.IsConverted || lead.Email != null) {
+				leadToEmailMap.put(lead.Id, lead.Email);
+			}
 		}
 
 		// Step 2: Find matching contacts based on email
+		// Added a set to prevent multiple contacts with the same email from getting added
 		Map<String, Contact> emailToContactMap = new Map<String, Contact>();
+		Set<String> duplicateEmails = new Set<String>();
 		for (Contact c : [SELECT Id, Email, AccountId FROM Contact WHERE Email IN :leadToEmailMap.values()]) {
-			if (!emailToContactMap.containsKey(c.Email)) {
-				emailToContactMap.put(c.Email, c);
-			} else {
-				// If we found another contact with the same email, we don't auto-convert.
-				// So we remove the email from the map.
+			if (emailToContactMap.containsKey(c.Email)) {
+				duplicateEmails.add(c.Email);
 				emailToContactMap.remove(c.Email);
+			} else {
+				emailToContactMap.put(c.Email, c);
 			}
+		}
+
+		// Loop over the duplicate emails and delete any contacts that have that email
+		for (String duplicateEmail : duplicateEmails) {
+			emailToContactMap.remove(duplicateEmail);
 		}
 
 		// Step 3: Auto-convert leads
